<resources>
    <string name="app_name">IntentsProj</string>
    <string name="num1">Number 1 :</string>
    <string name="num2">Number 2 :</string>
    <string name="ok">OK</string>
    <string name="txt1">Insert Num One</string>
    <string name="txt2">Insert Num Two</string>

    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="Multi">*</string>
    <string name="Dev">/</string>

</resources>
